fix mengapa kami versi mobile

--- a/asset/css/responsive.css
+++ b/asset/css/responsive.css
@@ -50,6 +50,15 @@
   .card-box {
     width: 100%;
   }
+  .mengapa-description h2{
+    font-size: 24px;
+  }
+  .mengapa-description span{
+    font-size:18px;
+  }
+  .mengapa-description p{
+    font-size: 16px;
+  }
 }
 
 @media screen and (min-width: 426px) {
